tdf#100021 - format argument issue in process.cxx

avoid warning whether pid_t is long or int

Change-Id: I533175b53166cb233169902d277906f5ce979421
Signed-off-by: Richard PALO <richard@NetBSD.org>